# oura-ring

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  client.py  oura_ring.py  oura_ring_v1.py  pyproject.toml
.github/workflows/: ci.yml
oura_ring/: __init__.py  auth.py  client.py
tests/: test_auth.py  test_client.py
