[project]
name = "oura-ring"
version = "1.0.0"
description = "Tools for acquiring and analyzing Oura API data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Josh Hejka", email = "josh@joshhejka.com" }]
keywords = ["oura", "oura ring", "wearable", "sleep", "health", "api", "fitness"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/hedgertronic/oura-ring"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oura_ring"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-recording>=0.13",
    "coverage[toml]>=7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
files = ["oura_ring"]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_unreachable = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["oura_ring"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.pytest.ini_options]
testpaths = ["tests"]
